--- a/public/stylesheets/global.css
+++ b/public/stylesheets/global.css
@@ -3,6 +3,7 @@ body, html {
 	padding: 0;
 	background: #e5e5e5;
 	font-family: Helvetica, sans-serif;
+	font-size: 12px;
 }
 
 h1 {
@@ -15,6 +16,24 @@ h2 {
 
 h3 {
 	font-size: 14px;
+}
+
+div#header {
+	border-bottom: 1px solid #ccc;
+}
+
+div#flash {
+	float: right;
+	font-size: 11px;
+	font-weight: bold;
+}
+
+div#flash span.notice {
+	color: green;
+}
+
+div#flash span.warning {
+	color: red;
 }
 
 div#main-container {
