--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -8,7 +8,9 @@
 
 <h3>Recent Messages</h3>
 
-<%= render :partial => @list.threads %>
+<% @list.threads.each do |thread| %>
+
+<% end %>
 
 <%= link_to 'Edit', edit_list_path(@list) %> |
 <%= link_to 'Back', lists_path %>
