--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,11 +6,9 @@
 	<%= link_to h(subscriber.name), subscriber %> (<%= h(subscriber.email)%>)
 <% end %>
 
-<h3>Recent Messages</h3>
+<h3>Recent Topics</h3>
 
-<% @list.threads.each do |thread| %>
-
-<% end %>
+<%= render :partial => @list.topics %>
 
 <%= link_to 'Edit', edit_list_path(@list) %> |
 <%= link_to 'Back', lists_path %>
