Subscribers and topics in list index view

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,13 +2,11 @@
 <p><%=h @list.description %></p>
 
 <h3>Subscribers</h3>
-<% @list.subscribers.each do |subscriber| %>
-	<%= link_to h(subscriber.name), subscriber %> (<%= h(subscriber.email)%>)
-<% end %>
+<%= @list.subscribers.present? ? (render :partial => @list.subscribers) : "There is no one subscribed to this list." %>
 
 <h3>Recent Topics</h3>
+<%= @list.topics.present? ? (render :partial => @list.topics) : "There are no recent topics for this list." %>
 
-<%= render :partial => @list.topics %>
-
+<br />
 <%= link_to 'Edit', edit_list_path(@list) %> |
 <%= link_to 'Back', lists_path %>
