--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%=h @list.name %></h2>
+<h2><%=h @list.name %> <%= link_to "[edit this list]", edit_list_path(@list) %></h2>
 <p><%=h @list.description %></p>
 
 <h3>Subscribers</h3>
@@ -8,5 +8,4 @@
 <%= @list.topics.present? ? (render :partial => @list.topics) : "There are no recent topics for this list." %>
 
 <br />
-<%= link_to 'Edit', edit_list_path(@list) %> |
 <%= link_to 'Back', lists_path %>
