Add a 'nav-bar' for lists and subscribers, count subscribers in list index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
 	
 	<div id="header">
 		<h1 id="dlist">dList</h1>
+		<p><%= link_to "Lists", lists_path %> | <%= link_to "Subscribers", subscribers_path %></p>
 	</div>
 	
 	<div id="body">
