Same thing with the edit form

--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -12,8 +12,8 @@
     <%= f.text_area :description %>
   </p>
   <p>
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
+    <%= f.label :short_name %><br />
+    <%= f.text_field :short_name %>
   </p>
   <p>
     <%= f.submit "Update" %>
