Added basic controllers for messages and topics, and added to nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,8 @@
 	
 	<div id="header">
 		<h1 id="dlist">dList</h1>
-		<p><%= link_to "Lists", lists_path %> | <%= link_to "Subscribers", subscribers_path %></p>
+		<p><%= link_to "Lists", lists_path %> | <%= link_to "Subscribers", subscribers_path %> | 
+          <%= link_to "Topics", topics_path %> | <%= link_to "Messages", messages_path %></p>
 	</div>
 	
 	<div id="body">
