Removed new links for topics/messages for now...

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,4 +1,4 @@
-<h2>Mailing Lists</h2>
+<h2>All Topics</h2>
 
 <table>
 <% @topics.each do |topic| %>
@@ -21,4 +21,4 @@
 
 <br />
 
-<%= link_to 'New topic', new_topic_path %>
+<!-- <%= link_to 'New topic', new_topic_path %> -->
