A very messy but successful attempt at making the mailer full functional

--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -4,7 +4,7 @@
 <% @topics.each do |topic| %>
 	<tr>
 		<td>
-			<%= link_to h(topic.subject), topic %>
+			<%= link_to h(topic.name), topic %>
 		</td>
 		<td>
 			<%= topic.created_at.to_s %>
