Added e-mail domain to list form

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -8,5 +8,5 @@
 </p>
 <p>
   <%= f.label :short_name %><br />
-  <%= f.text_field :short_name %>
+  <%= f.text_field :short_name %>&nbsp;@<%= APP_CONFIG[:email_domain] %>
 </p>
