Added author name back in, fixed line wrapping

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,7 +10,7 @@
 	</div>
   </div>
   <div class="message_body">
-     <pre><%= message.body_clean %></pre>
+     <pre WRAP><%= message.body_clean %></pre>
   </div>
 </div>
 <% end %>
