--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -1,5 +1,19 @@
+<p>
 <%= f.label :name %>
 <%= f.text_field :name %>
+</p>
 
+<p>
 <%= f.label :email %>
 <%= f.text_field :email %>
+</p>
+
+<p>
+  <%= f.label :password %><br />
+  <%= f.password_field :password %>
+</p>
+
+<p>
+  <%= f.label :password_confirmation, "Confirm Password" %><br />
+  <%= f.password_field :password_confirmation %>
+</p>
