Changed date display

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -6,7 +6,7 @@
       <p><b><%= message.author.name %></b> &lt;<%= message.author.email %>&gt;</p>
     </div>
     <div class="message-header-right" style="position: absolute; right: 5px;">
-   	  <p><b><%= message.created_at.to_s %></b></p>
+   	  <p><b><%= message.age %></b></p>
 	</div>
   </div>
   <div class="message_body">
