Added a simple message/show view

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,6 +13,7 @@
   <div class="message_body">
      <pre WRAP><%= message.body_clean %></pre>
   </div>
+  <%= link_to( h("Full message"), message ) %>
 </div>
 <% end %>
 <%= will_paginate @messages %>
