Added prototype to layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 <head>
 	<title>dList</title>
 	<%= stylesheet_link_tag "global" %>
+    <%= javascript_include_tag "prototype" %>
 </head>
 
 <body>
