--- a/app/views/subscribers/edit.html.erb
+++ b/app/views/subscribers/edit.html.erb
@@ -2,19 +2,8 @@
 
 <% form_for(@subscriber) do |f| %>
   <%= f.error_messages %>
+	<%= render :partial => 'form', :locals => { :f => f } %>
 
-  <p>
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </p>
-  <p>
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </p>
-  <p>
-    <%= f.label :public_key %><br />
-    <%= f.text_field :public_key %>
-  </p>
   <p>
     <%= f.submit "Update" %>
   </p>
