--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -17,3 +17,9 @@
   <%= f.label :password_confirmation, "Confirm Password" %><br />
   <%= f.password_field :password_confirmation %>
 </p>
+
+<% if current_user.admin? %>
+<p>
+  <%= f.check_box :admin %> <%= f.label :admin, "Administrator" %>
+</p>
+<% end %>
