--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -14,7 +14,7 @@
 		</td>
         <% unless current_user.admin? %>
         <td>
-            <%= link_to h("[unsubscribe]"), unsubscribe_list_path(@list), :confirm => "Are you sure you want to unsubscribe?" %>
+            <%= link_to h("[unsubscribe]"), unsubscribe_list_path(list), :confirm => "Are you sure you want to unsubscribe?" %>
         </td>
         <% end %>
 	</tr>
@@ -25,6 +25,8 @@
 <h3>Available Lists</h3>
 <table>
   <% @available_lists.each do |list| %>
+  <%# <dph> This probably doesn't belong here %>
+  <% next if list.subscribers.include?(current_user) %>
 		<td>
 			<%= link_to h(list.name), list %>
 		</td>
@@ -35,7 +37,7 @@
 			(<%= pluralize(list.subscriptions.size, 'subscriber') %>)
 		</td>
         <td>
-            <%= link_to h("[subscribe]"), subscribe_list_path(@list), :confirm => "Are you sure you want to subscribe?" %>
+            <%= link_to h("[subscribe]"), subscribe_list_path(list), :confirm => "Are you sure you want to subscribe?" %>
         </td>
   <% end %>
 <% end %>
