--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -35,7 +35,7 @@
 
 <h3>Recent Topics</h3> 
 <%= @list.topics.present? ? (render :partial => @list.topics) : "There are no recent topics for this list." %>
-<%= link_to h("[All Topics]"), "" %>
+<%= link_to h("[All Topics]"), list_topics_path(@list) %>
 
 <br />
 <br />
