--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -12,6 +12,9 @@
 		<td>
 			(<%= pluralize(list.subscriptions.size, 'subscriber') %>)
 		</td>
+        <td>
+            <%= link_to h("[topics]"), list_topics_path(list)  %>
+        </td>
         <% unless current_user.admin? %>
         <td>
             <%= link_to h("[unsubscribe]"), unsubscribe_list_path(list), :confirm => "Are you sure you want to unsubscribe?" %>
@@ -36,6 +39,9 @@
 		<td>
 			(<%= pluralize(list.subscriptions.size, 'subscriber') %>)
 		</td>
+        <td>
+            <%= link_to h("[topics]"), list_topics_path(list)  %>
+        </td>
         <td>
             <%= link_to h("[subscribe]"), subscribe_list_path(list), :confirm => "Are you sure you want to subscribe?" %>
         </td>
