--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -14,6 +14,6 @@
 </p>
 
 <p>
-  <%= f.label :private %><br />
-  <%= f.checkbox :private %>
+  <%= f.label :private %>
+  <%= f.check_box :private %>
 </p>
