Add some clarity to the public/private option when creating a list

--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -14,6 +14,6 @@
 </p>
 
 <p>
-  <%= f.label :private %>
   <%= f.check_box :private %>
+  <%= f.label :private, 'Make this list private (invitation only)' %>
 </p>
