--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -18,3 +18,18 @@
   <%= f.password_field :password_confirmation %>
 </p>
 
+<% if current_user.admin? %>
+<p>
+	<%= check_box_tag 'subscriber[admin]', "1", @subscriber.admin, 
+	:onclick => remote_function(
+  		:url => url_for(toggle_administrator_subscriber_path(@subscriber)),
+  		:method => :put,
+  		:before => "Element.show('spinner-admin')",
+  		:complete => "Element.hide('spinner-admin')",
+  		:with => "this.name + '=' + this.checked"
+	), :disabled => @subscriber == current_user ? true : false %>
+	This user is an administrator
+	<span id="spinner-admin" style="display:none;"><%= image_tag 'spinner.gif' %></span>
+<p>
+<% end %>
+	
