--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -28,7 +28,7 @@
   		:complete => "Element.hide('spinner-admin')",
   		:with => "this.name + '=' + this.checked"
 	), :disabled => @subscriber == current_user ? true : false %>
-	This user is an administrator
+	<%= f.label :admin, 'This user is an administrator' %>
 	<span id="spinner-admin" style="display:none;"><%= image_tag 'spinner.gif' %></span>
 <p>
 <% end %>
