--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -11,7 +11,7 @@
     <td><%= link_to h(subscriber.name), edit_subscriber_path(subscriber) %></td>
     <td><%= mail_to h(subscriber.email) %></td>
     <td>
-			<%= check_box_tag 'subscriber[admin]', "1", subscriber.admin, 
+			<%= check_box_tag "subscriber[admin][#{subscriber.id}]", "1", subscriber.admin, 
 			:onclick => remote_function(
 		  		:url => url_for(toggle_administrator_subscriber_path(subscriber)),
 		  		:method => :put,
@@ -19,8 +19,8 @@
 		  		:complete => "Element.hide('spinner-admin-#{subscriber.id}')",
 		  		:with => "this.name + '=' + this.checked"), 
 			:disabled => subscriber == current_user %>
-			<%= label 'subscriber', 'admin', 'This user is an administrator' %>
-			<span id="spinner-admin-<%= subscriber.id %>" style="display:none;"><%= image_tag 'spinner.gif' %></span>
+			<%= label_tag "subscriber[admin][#{subscriber.id}]", 'This user is an administrator' %>
+			<%= image_tag 'spinner.gif', :id => "spinner-admin-#{subscriber.id}", :style => 'display: none' %>
     </td>
   </tr>
 <% end %>
