--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,56 +1,8 @@
-<h2><%= current_user.admin? ? "Mailing Lists" : "My Lists" %></h2>
-
-<table>
-<% @lists.each do |list| %>
-	<tr>
-		<td>
-			<%= link_to h(list.name), list %>
-		</td>
-		<td>
-			<%= mail_to h(list.email) %>
-		</td>
-		<td>
-			(<%= pluralize(list.subscriptions.size, 'subscriber') %>)
-		</td>
-        <td>
-            <%= link_to h("[topics]"), list_topics_path(list)  %>
-        </td>
-        <% unless current_user.admin? %>
-        <td>
-            <%= link_to h("[unsubscribe]"), unsubscribe_list_path(list), :confirm => "Are you sure you want to unsubscribe?" %>
-        </td>
-        <% end %>
-	</tr>
+<% if current_user.admin? %>
+	<%= render :partial => 'index_admin' %>
+<% else %>
+	<%= render :partial => 'index_user' %>
 <% end %>
-</table>
-
-<% unless current_user.admin? %>
-<h3>Available Lists</h3>
-<table>
-  <% @available_lists.each do |list| %>
-  	<% unless list.subscribers.include?(current_user) %>
-		<tr>
-		<td>
-			<%= link_to h(list.name), list %>
-		</td>
-		<td>
-			<%= mail_to h(list.email) %>
-		</td>
-		<td>
-			(<%= pluralize(list.subscriptions.size, 'subscriber') %>)
-		</td>
-        <td>
-            <%= link_to "[topics]", list_topics_path(list)  %>
-        </td>
-        <td>
-            <%= link_to "[subscribe]", subscribe_list_path(list), :confirm => "Are you sure you want to subscribe?" %>
-        </td>
-		</tr>
-	<% end %>
-  <% end %>
-<% end %>
-</table>
 
 <br />
-
 <%= link_to 'New list', new_list_path if current_user.admin? %>
