Slightly different layout for the login screen and non logged in signups

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
 <head>
 	<title>dList</title>
 	<%= stylesheet_link_tag "global" %>
-    <%= javascript_include_tag "prototype" %>
+    <%= javascript_include_tag :defaults %>
 </head>
 
 <body>
