--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -1,10 +1,10 @@
 <p>
-<%= f.label :name %>
+<%= f.label :name %><br />
 <%= f.text_field :name %>
 </p>
 
 <p>
-<%= f.label :email %>
+<%= f.label :email %><br />
 <%= f.text_field :email %>
 </p>
 
