--- a/app/views/subscribers/index.html.erb
+++ b/app/views/subscribers/index.html.erb
@@ -1,6 +1,10 @@
 <h1>All Subscribers</h1>
 
 <table>
+	<tr>
+		<th>Name</th>
+		<th>Email</th>
+		<th>Admin</th>
 <% @subscribers.each do |subscriber| %>
   <tr>
     <td><%= link_to h(subscriber.name), edit_subscriber_path(subscriber) %></td>
@@ -14,7 +18,6 @@
 		  		:complete => "Element.hide('spinner-admin-#{subscriber.id}')",
 		  		:with => "this.name + '=' + this.checked"), 
 			:disabled => subscriber == current_user %>
-			Administrator
 			<%= image_tag 'spinner.gif', :id => "spinner-admin-#{subscriber.id}", :style => 'display: none' %>
     </td>
   </tr>
