--- a/app/views/subscribers/_subscriber.html.erb
+++ b/app/views/subscribers/_subscriber.html.erb
@@ -1,4 +1,15 @@
-<p>
-	<%= link_to h(subscriber.name), subscriber %>
-	<%= mail_to h(subscriber.email) %>
-</p>
+<tr>
+	<td><%= link_to h(subscriber.name), edit_subscriber_path(subscriber) %></td>
+	<td><%= mail_to h(subscriber.email) %></td>
+	<td>
+		<%= check_box_tag "subscriber[admin]", "1", subscriber.admin, 
+		:onclick => remote_function(
+	  		:url => url_for(toggle_administrator_subscriber_path(subscriber)),
+	  		:method => :put,
+	  		:before => "Element.show('spinner-admin-#{subscriber.id}')",
+	  		:complete => "Element.hide('spinner-admin-#{subscriber.id}')",
+	  		:with => "this.name + '=' + this.checked"), 
+		:disabled => subscriber == current_user %>
+		<%= image_tag 'spinner.gif', :id => "spinner-admin-#{subscriber.id}", :style => 'display: none' %>
+	</td>
+</tr>
