Don't show the admin checkbox for users that can't login (don't have a password)

--- a/app/views/subscribers/_subscriber.html.erb
+++ b/app/views/subscribers/_subscriber.html.erb
@@ -9,7 +9,7 @@
 	  		:before => "Element.show('spinner-admin-#{subscriber.id}')",
 	  		:complete => "Element.hide('spinner-admin-#{subscriber.id}')",
 	  		:with => "this.name + '=' + this.checked"), 
-		:disabled => subscriber == current_user %>
+		:disabled => subscriber == current_user if subscriber.login_permitted? %>
 		<%= image_tag 'spinner.gif', :id => "spinner-admin-#{subscriber.id}", :style => 'display: none' %>
 	</td>
 </tr>
