Add servers to admin links bar, also remove logged_in? requirement in application.html.erb because you shouldn't ever see this layout unless you are logged in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,23 +23,16 @@
 	<div id="header" style="position: relative; height: 75px;">
       <div class="header-left" style="position: absolute; left: 5px"> 
 		<h1 id="dlist">dList</h1>
-		<% if logged_in? %>
-          <% if current_user.admin? %>
-		    <p><%= link_to "Lists", lists_path %> | <%= link_to "Subscribers", subscribers_path %> | 
-            <%= link_to "Messages", messages_path %></p>
-          <% else %>
-		    <p><%= link_to "My Lists", lists_path %> | <%= link_to "My Account", current_user %> </p>
-          <% end %>
-		<% end %>
+        <% if current_user.admin? %>
+		  <p><%= link_to "Lists", lists_path %> | <%= link_to "Subscribers", subscribers_path %> | 
+          <%= link_to "Messages", messages_path %> | <%= link_to "Servers", servers_path %></p>
+        <% else %>
+		  <p><%= link_to "My Lists", lists_path %> | <%= link_to "My Account", current_user %> </p>
+        <% end %>
       </div>
       <div class="header-right" style="position: absolute: right: 5px; vertical-align: bottom; " align="right">
-        <% if logged_in? %>
-          <p>Welcome, <%=h current_user.name %>!<br/>
-          <em>You are <%= current_user.admin? ? "an admin" : "a subscriber" %></em><br/>
-          <%= link_to "[Logout]", sessions_path, :method => :delete %>
-        <% else %>
-          <%= link_to "[Login]", "login" %>
-        <% end %>
+        <p>Welcome, <%=h current_user.name %>!<br/>
+        <%= link_to "[Logout]", sessions_path, :method => :delete %>
       </div>
 	</div>
 	
