Server index cleanup

--- a/app/views/servers/_server.html.erb
+++ b/app/views/servers/_server.html.erb
@@ -1,1 +1,1 @@
-<%= link_to h(server.name), server %> (<%= server.ip %>)
+<%= link_to h(server.name), server %> (<%=h server.hostname %> - <%=h server.ip %>)<br />
