Non-admins don't get to see how many subscribers there are in a list

--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -5,9 +5,11 @@
 	<td>
 		<%= mail_to h(list.email) %>
 	</td>
+	<% if current_user.admin? %>
 	<td>
 		(<%= pluralize(list.subscriptions.size, 'subscriber') %>)
 	</td>
+	<% end %>
     <td>
         <%= link_to h("[topics]"), list_topics_path(list)  %>
     </td>
