--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-	<title>dList</title>
+	<title><%= APP_CONFIG[:email_domain] %></title>
 	<%= stylesheet_link_tag "global" %>
     <%= javascript_include_tag :defaults %>
 </head>
@@ -22,7 +22,7 @@
 	
 	<div id="header" style="position: relative; height: 75px;">
       <div class="header-left" style="position: absolute; left: 5px"> 
-		<h1 id="dlist">dList</h1>
+		<h1><%= APP_CONFIG[:email_domain] %></h1>
         <% if current_user.admin? %>
 		  <p><%= link_to "Lists", lists_path %> | <%= link_to "Subscribers", subscribers_path %> | 
           <%= link_to "Messages", messages_path %> | <%= link_to "Servers", servers_path %></p>
