--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 		  <p><%= link_to "Lists", lists_path %> | <%= link_to "Subscribers", subscribers_path %> | 
           <%= link_to "Messages", messages_path %> | <%= link_to "Servers", servers_path %></p>
         <% else %>
-		  <p><%= link_to "My Lists", lists_path %> | <%= link_to "My Account", current_user %> </p>
+		  <p><%= link_to "My Lists", lists_path %> | <%= link_to "My Account", edit_subscriber_path(current_user) %> </p>
         <% end %>
       </div>
       <div class="header-right" style="position: absolute: right: 5px; vertical-align: bottom; " align="right">
