--- a/app/views/subscribers/edit.html.erb
+++ b/app/views/subscribers/edit.html.erb
@@ -1,13 +1,12 @@
-<h1>Editing subscriber</h1>
+<h2>Edit <%= current_user.admin? ? @subscriber.name : 'your information' %></h2>
 
 <% form_for(@subscriber) do |f| %>
   <%= f.error_messages %>
 	<%= render :partial => 'form', :locals => { :f => f } %>
 
   <p>
-    <%= f.submit "Update" %>
+    <%= f.submit "Update" %>  or <%= link_to 'Cancel', subscribers_path %>
   </p>
 <% end %>
 
-<%= link_to 'Delete this subscriber', @subscriber, :confirm => 'Are you sure you want to delete this subscriber? This will permanently delete the user as well as any messages that they have created.  Consider disabling the user instead.', :method => :delete %> |
-<%= link_to 'Go Back', subscribers_path %>
+<%= link_to 'Delete this subscriber', @subscriber, :confirm => 'Are you sure you want to delete this subscriber? This will permanently delete the user as well as any messages that they have created.  Consider disabling the user instead.', :method => :delete if current_user.admin? %>
